<resources>
    <string name="app_name">Phero</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="map_menu_option">Map</string>
    <string name="explore_menu_option">Explore</string>
    <string name="account_menu_option">Account</string>
    <string name="settings_menu_option">Settings</string>

    <string name="action_settings">Settings</string>
    <string name="profile_username_hint">username</string>
    <string name="profile_like_received">I have %d likes</string>
    <string name="full_name">Full name</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>

    <string name="view_all_button_text">View All</string>
    <string name="edit">Edit</string>

    <string name="auth_failed">Authentication failed</string>
    <string name="registration_failed">Registration unsuccessful </string>
    <string name="none_fields_blank">None of these fields can be empty!</string>
    <string name="cancel">Cancel</string>
    <string name="log_out">Log Out</string>

    <string name="register_username">Username(Email)</string>
    <string name="register_password">Password</string>
    <string name="register_repeat_password">Re-type password</string>
    <string name="register_nickname">Nickname(Can be changed)</string>
    <string name="register_registration_button">Register!</string>
    <string name="title_activity_log_in">Log In</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="ask_register_text">No account? Don\'t worry, you can register here!</string>
    <string name="title_activity_explore">Map</string>

    <string name="create_a_new_event">Create a New Event</string>
    <string name="name">Name</string>
    <string name="host">Host</string>
    <string name="location">Location</string>
    <string name="date">Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="create">Create</string>
    <string name="_6_00pm">6:00pm</string>
    <string name="_7950_baltimore_avenue_college_park_md_20742">7950 Baltimore Avenue College Park, MD 20742</string>
    <string name="me">Me</string>
    <string name="upload_image">Upload Image</string>
    <string name="welcome">Welcome To Phero!!</string>
    <string name="info_text_1">Phero is your one stop destination for local events happening around you</string>
    <string name="info_text_2">Look for the plus button whenever you want tell others whats going on! </string>


    <string-array name="filter_array">
        <item>Filter 1</item>
        <item>Filter 2</item>
        <item>Filter 3</item>
    </string-array>

    <string-array name="sort_array">
        <item>Sort 1</item>
        <item>Sort 2</item>
        <item>Sort 3</item>
    </string-array>
    <string name="event_list"></string>
    <string name="sign_up_for_phero">Sign Up For Phero</string>

</resources>
