<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/fab_margin"
    tools:context="groupproject.cmsc436.flow.RegistrationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_username"
        style="@style/RegisterViewTitle"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_username"
        style="@style/RegisterViewInput"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firstname"
        style="@style/RegisterViewTitle"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_firstname"
        style="@style/RegisterViewInput"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lastname"
        style="@style/RegisterViewTitle"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_lastname"
        style="@style/RegisterViewInput"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_password"
        style="@style/RegisterViewTitle"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_password"
        android:inputType="textPassword"
        style="@style/RegisterViewInput"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_repeat_password"
        style="@style/RegisterViewTitle"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/register_repeat_password"
        android:inputType="textPassword"
        style="@style/RegisterViewInput"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/register_margin"
        android:layout_marginRight="@dimen/register_margin">
        <Button
            android:layout_width="137dp"
            android:layout_height="40dp"
            android:id="@+id/register_registration_button"
            android:background="@color/colorPrimaryBlue"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:text="@string/register_registration_button"/>

        <Space
            android:layout_width="5dp"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/cancel_button"
            android:background="@color/colorPrimaryBlue"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:text="@string/cancel"/>
    </LinearLayout>


</LinearLayout>
