<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="groupproject.cmsc436.flow.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintVertical_bias="0.084" />

    <TextView
        android:id="@+id/info_text_1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/info_text_1"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text"
        app:layout_constraintVertical_bias="0.196" />

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="147dp"
        android:layout_height="133dp"
        android:layout_margin="@dimen/profile_margin"
        android:src="@drawable/mummy_chibi"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/colorMetallicGray"
        app:layout_constraintLeft_toRightOf="@+id/welcome_text"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/info_text_2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/info_text_2"
        android:textSize="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/info_text_1"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.11"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.117" />


</android.support.constraint.ConstraintLayout>
